# game-of-life-arkanoid

./: CMakeLists.txt  README.md  emshell.html  main.cpp  vcpkg.json
cmake/: deps.cmake
gh-pages/: demo.html  demo.js  demo.wasm
input/: KeyboardInputHandler.h  TouchInputHandler.h
scenes/: ArkanoidScene.cpp  ArkanoidScene.h  BaseScene.h
tools/: CellAutomata.cpp  CellAutomata.h  PhraseEncoder.h
